unpackaged/main/default/objects/Contact/fields/Assistant_Email__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Email__c</fullName>
    <description>Email address for this person&#39;s assistant.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email address for this person&#39;s assistant.</inlineHelpText>
    <label>Assistant Email</label>
    <type>Email</type>
</CustomField>