unpackaged/main/default/objects/Contact/fields/Assistant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Notes__c</fullName>
    <description>Notes about this person&#39;s assistant</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notes about this person&#39;s assistant</inlineHelpText>
    <label>Assistant Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>