unpackaged/main/default/objects/Contact/fields/Corporate_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Partnership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this person is part of a corporate partnerships program.</description>
    <inlineHelpText>Indicates that this person is part of a corporate partnerships program.</inlineHelpText>
    <label>Corporate Partnership</label>
    <type>Checkbox</type>
</CustomField>