unpackaged/main/default/objects/Contact/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who will be hosting this person on their site visit.</description>
    <inlineHelpText>The user who will be hosting this person on their site visit.</inlineHelpText>
    <label>Host</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VisitingContacts</relationshipName>
    <type>Lookup</type>
</CustomField>