unpackaged/main/default/objects/Contact/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <label>Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Clinician</fullName>
            </value>
            <value>
                <fullName>Hospitalist</fullName>
            </value>
            <value>
                <fullName>Case Manager</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>C-suite</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Office Staff</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>