unpackaged/main/default/objects/Contact/recordTypes/Clinical.recordType-meta.xml
<RecordType>
    <fullName>Clinical</fullName>
    <active>true</active>
    <description>For all clinical users</description>
    <label>Clinical</label>
</RecordType>