unpackaged/main/default/objects/Contact/recordTypes/Employer_Representative.recordType-meta.xml
<RecordType>
    <fullName>Employer_Representative</fullName>
    <active>true</active>
    <description>For all employees or representatives at an employer</description>
    <label>Employer Representative</label>
</RecordType>