unpackaged/main/default/objects/Contact/recordTypes/Non_Clinical.recordType-meta.xml
<RecordType>
    <fullName>Non_Clinical</fullName>
    <active>true</active>
    <description>For all non-clinical users in a hospital or practice</description>
    <label>Non-Clinical</label>
</RecordType>